--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "publisher": "c75",
   "displayName": "Context-Aware Suggestions (JSX/HTML)",
   "description": "Context-aware suggestion control for JSX and HTML",
+  "icon": "icon.png",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.70.0"
