--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "https://github.com/avin/vscode-context-aware-suggestions"
   },
+  "dependencies": {
+    "typescript": "^5.9.3"
+  },
   "activationEvents": [
     "onLanguage:javascriptreact",
     "onLanguage:typescriptreact",
@@ -54,7 +57,6 @@
     "@types/node": "22.x",
     "typescript-eslint": "^8.48.1",
     "eslint": "^9.39.1",
-    "typescript": "^5.9.3",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2"
   }
